--- a/yesod-chatapp.cabal
+++ b/yesod-chatapp.cabal
@@ -8,7 +8,7 @@ executable         yesod-chatapp
 
     main-is:           main.hs
 
-    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N
+    ghc-options:       -W -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
 
     build-depends: base                          >= 4          && < 5
                  , yesod                         >= 1.4.1      && < 1.5
